update title and link

--- a/docs/transpile/defaults-and-configuration-options.ipynb
+++ b/docs/transpile/defaults-and-configuration-options.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "All parameters except `optimization_level` are optional.  For full details, see the [Transpiler API documentation](/api/qiskit/transpiler#transpiler-api).\n",
     "\n",
-    "- `optimization_level` (int) - How much optimization to perform on the circuits. Integer in the range (0 - 3). Higher levels generate more optimized circuits, at the expense of longer transpilation time. See the [Set optimization topic](set-optimization) for more details.\n",
+    "- `optimization_level` (int) - How much optimization to perform on the circuits. Integer in the range (0 - 3). Higher levels generate more optimized circuits, at the expense of longer transpilation time. See [Set transpiler optimization level](set-optimization) for more details.\n",
     "\n",
     "### Parameters used to describe the compilation target:\n",
     "\n",
