copy deflate_circuit from mapomatic

--- a/docs/transpile/set-optimization.ipynb
+++ b/docs/transpile/set-optimization.ipynb
@@ -254,27 +254,22 @@
    "id": "247f60a9-b0ad-4e83-85ea-008dc808267f",
    "metadata": {},
    "source": [
-    "This circuit has only two CX gates. However, this is an approximate circuit, so we need to understand the difference in fidelity to the desired circuit with the incurred error from running on noisy qubits. We can calculate the fidelity of the approximate circuit:"
+    "This circuit has only two CX gates, but it's an approximate circuit. To understand how its effect differs from the exact circuit, we can calculate its fidelity, as in the cell below. To help us do this, we define some functions that reduce the transpiled circuit, which contains 127 qubits (the number of qubits on our device), to a circuit that only contains the active qubits."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "941904a9-7605-4533-9fc0-1c480bcc637b",
+   "id": "56988ecd-8a78-42ca-90eb-fc956674c64d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Maximum allowed dimension exceeded",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msynthesis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtwo_qubit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtwo_qubit_decompose\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m trace_to_fid\n\u001b[0;32m----> 4\u001b[0m exact_fid \u001b[38;5;241m=\u001b[39m trace_to_fid(np\u001b[38;5;241m.\u001b[39mtrace(np\u001b[38;5;241m.\u001b[39mdot(\u001b[43mOperator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqc_t3_exact\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39madjoint()\u001b[38;5;241m.\u001b[39mdata, UU)))\n\u001b[1;32m      5\u001b[0m approx_fid \u001b[38;5;241m=\u001b[39m trace_to_fid(np\u001b[38;5;241m.\u001b[39mtrace(np\u001b[38;5;241m.\u001b[39mdot(Operator(qc_t3_approx)\u001b[38;5;241m.\u001b[39madjoint()\u001b[38;5;241m.\u001b[39mdata, UU)))\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSynthesis fidelity\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mExact: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexact_fid\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mApproximate: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mapprox_fid\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/documentation--fuetTj0/lib/python3.10/site-packages/qiskit/quantum_info/operators/operator.py:98\u001b[0m, in \u001b[0;36mOperator.__init__\u001b[0;34m(self, data, input_dims, output_dims)\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(data, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mcomplex\u001b[39m)\n\u001b[1;32m     90\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, (QuantumCircuit, Operation)):\n\u001b[1;32m     91\u001b[0m     \u001b[38;5;66;03m# If the input is a Terra QuantumCircuit or Operation we\u001b[39;00m\n\u001b[1;32m     92\u001b[0m     \u001b[38;5;66;03m# perform a simulation to construct the unitary operator.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     96\u001b[0m     \u001b[38;5;66;03m# conditional gates, measure, or reset will cause an\u001b[39;00m\n\u001b[1;32m     97\u001b[0m     \u001b[38;5;66;03m# exception to be raised.\u001b[39;00m\n\u001b[0;32m---> 98\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_init_instruction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mdata\n\u001b[1;32m     99\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(data, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mto_operator\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    100\u001b[0m     \u001b[38;5;66;03m# If the data object has a 'to_operator' attribute this is given\u001b[39;00m\n\u001b[1;32m    101\u001b[0m     \u001b[38;5;66;03m# higher preference than the 'to_matrix' method for initializing\u001b[39;00m\n\u001b[1;32m    102\u001b[0m     \u001b[38;5;66;03m# an Operator object.\u001b[39;00m\n\u001b[1;32m    103\u001b[0m     data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mto_operator()\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/documentation--fuetTj0/lib/python3.10/site-packages/qiskit/quantum_info/operators/operator.py:702\u001b[0m, in \u001b[0;36mOperator._init_instruction\u001b[0;34m(cls, instruction)\u001b[0m\n\u001b[1;32m    699\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Operator(np\u001b[38;5;241m.\u001b[39marray(instruction, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mcomplex\u001b[39m))\n\u001b[1;32m    701\u001b[0m dimension \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39minstruction\u001b[38;5;241m.\u001b[39mnum_qubits\n\u001b[0;32m--> 702\u001b[0m op \u001b[38;5;241m=\u001b[39m Operator(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meye\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdimension\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    703\u001b[0m \u001b[38;5;66;03m# Convert circuit to an instruction\u001b[39;00m\n\u001b[1;32m    704\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(instruction, QuantumCircuit):\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/documentation--fuetTj0/lib/python3.10/site-packages/numpy/lib/twodim_base.py:211\u001b[0m, in \u001b[0;36meye\u001b[0;34m(N, M, k, dtype, order, like)\u001b[0m\n\u001b[1;32m    209\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m M \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    210\u001b[0m     M \u001b[38;5;241m=\u001b[39m N\n\u001b[0;32m--> 211\u001b[0m m \u001b[38;5;241m=\u001b[39m \u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    212\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m M:\n\u001b[1;32m    213\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m m\n",
-      "\u001b[0;31mValueError\u001b[0m: Maximum allowed dimension exceeded"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synthesis fidelity\n",
+      "Exact: 1.000\n",
+      "Approximate: 0.992\n"
      ]
     }
    ],
@@ -282,15 +277,64 @@
     "import numpy as np\n",
     "from qiskit.synthesis.two_qubit.two_qubit_decompose import trace_to_fid\n",
     "\n",
-    "exact_fid = trace_to_fid(np.trace(np.dot(Operator(qc_t3_exact).adjoint().data, UU)))\n",
-    "approx_fid = trace_to_fid(np.trace(np.dot(Operator(qc_t3_approx).adjoint().data, UU)))\n",
+    "def active_bits(input_circ):\n",
+    "    \"\"\"Find active bits (quantum and classical) in a transpiled circuit.\"\"\"\n",
+    "    active_qubits = set([])\n",
+    "    active_clbits = set([])\n",
+    "    for item in input_circ.data:\n",
+    "        if item[0].name not in [\"barrier\", \"delay\"]:\n",
+    "            qubits = item[1]\n",
+    "            for qubit in qubits:\n",
+    "                active_qubits.add(qubit)\n",
+    "            clbits = item[2]\n",
+    "            for clbit in clbits:\n",
+    "                active_clbits.add(clbit)\n",
+    "\n",
+    "    return active_qubits, active_clbits\n",
+    "\n",
+    "def deflate_circuit(input_circ):\n",
+    "    \"\"\"Reduce a transpiled circuit down to only active qubits.\"\"\"\n",
+    "    active_qubits, active_clbits = active_bits(input_circ)\n",
+    "\n",
+    "    num_reduced_qubits = len(active_qubits)\n",
+    "    num_reduced_clbits = len(active_clbits)\n",
+    "\n",
+    "    active_qubit_map = {}\n",
+    "    active_bit_map = {}\n",
+    "    for idx, val in enumerate(\n",
+    "        sorted(active_qubits, key=lambda x: input_circ.find_bit(x).index)\n",
+    "    ):\n",
+    "        active_qubit_map[val] = idx\n",
+    "    for idx, val in enumerate(\n",
+    "        sorted(active_clbits, key=lambda x: input_circ.find_bit(x).index)\n",
+    "    ):\n",
+    "        active_bit_map[val] = idx\n",
+    "\n",
+    "    new_qc = QuantumCircuit(num_reduced_qubits, num_reduced_clbits)\n",
+    "    for item in input_circ.data:\n",
+    "        # Find active qubits used by instruction (if any)\n",
+    "        used_active_set = [qubit for qubit in item[1] if qubit in active_qubits]\n",
+    "        # If any active qubits used, add to deflated circuit\n",
+    "        if any(used_active_set):\n",
+    "            ref = getattr(new_qc, item[0].name)\n",
+    "            params = item[0].params\n",
+    "            qargs = [new_qc.qubits[active_qubit_map[qubit]] for qubit in used_active_set]\n",
+    "            cargs = [new_qc.clbits[active_bit_map[clbit]] for clbit in item[2]]\n",
+    "            ref(*params, *qargs, *cargs)\n",
+    "    new_qc.global_phase = input_circ.global_phase\n",
+    "    return new_qc\n",
+    "\n",
+    "exact_fid = trace_to_fid(np.trace(np.dot(Operator(deflate_circuit(qc_t3_exact)).adjoint().data, UU)))\n",
+    "approx_fid = trace_to_fid(np.trace(np.dot(Operator(deflate_circuit(qc_t3_approx)).adjoint().data, UU)))\n",
     "print(f'Synthesis fidelity\\nExact: {exact_fid:.3f}\\nApproximate: {approx_fid:.3f}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3bc4d6b1-e4d1-494f-9f7a-1feb297a7760",
-   "metadata": {},
+   "id": "382f6ffc-1d17-4c4b-8ea1-2f828c705793",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "Adjusting the optimization level can change other aspects of the circuit too, not just the number of CX gates. For examples of how setting optimization level changes the layout, see [Representing quantum computers](representing_quantum_computers).\n",
     "\n",
