use QuantumCircuit.from_instructions for deflating

--- a/docs/transpile/set-optimization.ipynb
+++ b/docs/transpile/set-optimization.ipynb
@@ -254,12 +254,12 @@
    "id": "247f60a9-b0ad-4e83-85ea-008dc808267f",
    "metadata": {},
    "source": [
-    "This circuit has only two CX gates, but it's an approximate circuit. To understand how its effect differs from the exact circuit, we can calculate its fidelity, as in the cell below. To help us do this, we define some functions that reduce the transpiled circuit, which contains 127 qubits (the number of qubits on our device), to a circuit that only contains the active qubits."
+    "This circuit has only two CX gates, but it's an approximate circuit. To understand how its effect differs from the exact circuit, we can calculate its fidelity, as in the cell below. Before performing the computation, we first reduce the transpiled circuit, which contains 127 qubits, down to a circuit that only contains the active qubits, of which there are two."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "56988ecd-8a78-42ca-90eb-fc956674c64d",
    "metadata": {},
    "outputs": [
@@ -277,55 +277,13 @@
     "import numpy as np\n",
     "from qiskit.synthesis.two_qubit.two_qubit_decompose import trace_to_fid\n",
     "\n",
-    "def active_bits(input_circ):\n",
-    "    \"\"\"Find active bits (quantum and classical) in a transpiled circuit.\"\"\"\n",
-    "    active_qubits = set([])\n",
-    "    active_clbits = set([])\n",
-    "    for item in input_circ.data:\n",
-    "        if item[0].name not in [\"barrier\", \"delay\"]:\n",
-    "            qubits = item[1]\n",
-    "            for qubit in qubits:\n",
-    "                active_qubits.add(qubit)\n",
-    "            clbits = item[2]\n",
-    "            for clbit in clbits:\n",
-    "                active_clbits.add(clbit)\n",
+    "# Reduce circuits down to 2 qubits so they are easy to simulate\n",
+    "qc_t3_exact_small = QuantumCircuit.from_instructions(qc_t3_exact)\n",
+    "qc_t3_approx_small = QuantumCircuit.from_instructions(qc_t3_approx)\n",
     "\n",
-    "    return active_qubits, active_clbits\n",
-    "\n",
-    "def deflate_circuit(input_circ):\n",
-    "    \"\"\"Reduce a transpiled circuit down to only active qubits.\"\"\"\n",
-    "    active_qubits, active_clbits = active_bits(input_circ)\n",
-    "\n",
-    "    num_reduced_qubits = len(active_qubits)\n",
-    "    num_reduced_clbits = len(active_clbits)\n",
-    "\n",
-    "    active_qubit_map = {}\n",
-    "    active_bit_map = {}\n",
-    "    for idx, val in enumerate(\n",
-    "        sorted(active_qubits, key=lambda x: input_circ.find_bit(x).index)\n",
-    "    ):\n",
-    "        active_qubit_map[val] = idx\n",
-    "    for idx, val in enumerate(\n",
-    "        sorted(active_clbits, key=lambda x: input_circ.find_bit(x).index)\n",
-    "    ):\n",
-    "        active_bit_map[val] = idx\n",
-    "\n",
-    "    new_qc = QuantumCircuit(num_reduced_qubits, num_reduced_clbits)\n",
-    "    for item in input_circ.data:\n",
-    "        # Find active qubits used by instruction (if any)\n",
-    "        used_active_set = [qubit for qubit in item[1] if qubit in active_qubits]\n",
-    "        # If any active qubits used, add to deflated circuit\n",
-    "        if any(used_active_set):\n",
-    "            ref = getattr(new_qc, item[0].name)\n",
-    "            params = item[0].params\n",
-    "            qargs = [new_qc.qubits[active_qubit_map[qubit]] for qubit in used_active_set]\n",
-    "            cargs = [new_qc.clbits[active_bit_map[clbit]] for clbit in item[2]]\n",
-    "            ref(*params, *qargs, *cargs)\n",
-    "    new_qc.global_phase = input_circ.global_phase\n",
-    "    return new_qc\n",
-    "\n",
-    "exact_fid = trace_to_fid(np.trace(np.dot(Operator(deflate_circuit(qc_t3_exact)).adjoint().data, UU)))\n",
-    "approx_fid = trace_to_fid(np.trace(np.dot(Operator(deflate_circuit(qc_t3_approx)).adjoint().data, UU)))\n",
+    "# Compute the fidelity\n",
+    "exact_fid = trace_to_fid(np.trace(np.dot(Operator(qc_t3_exact_small).adjoint().data, UU)))\n",
+    "approx_fid = trace_to_fid(np.trace(np.dot(Operator(qc_t3_approx_small).adjoint().data, UU)))\n",
     "print(f'Synthesis fidelity\\nExact: {exact_fid:.3f}\\nApproximate: {approx_fid:.3f}')"
    ]
   },
