Add page outline

--- a/docs/transpile/disjoint-transpilation.ipynb
+++ b/docs/transpile/disjoint-transpilation.ipynb
@@ -8,7 +8,13 @@
     "\n",
     "One of the more powerful features of Qiskit is the ability to support unique device configurations.  We can create unique `BackendV2` objects with different geometries or basis gates and transpile your circuits with those configurations in mind.  As an example, let's consider a backend with a disjoint qubit lattice whose basis gates are different along the edges than within the bulk.\n",
     "\n",
-    "To start, first create a new class which extends `BackendV2`.  We'll add in "
+    "To start, first create a new class which extends `BackendV2`.  We'll add in \n",
+    "\n",
+    "Points to cover in detail:\n",
+    "\n",
+    "- Creating your own backend\n",
+    "- Construction of the `Target` object and creating a custom gate set\n",
+    "- Transpiling a circuit against your custom backend."
    ]
   },
   {
