--- a/docs/run/index.mdx
+++ b/docs/run/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: Overview of the Run section, where you'll find information on IBM Quantum systems and executing jobs on them
+description: Overview of the Run section, where you'll find information on Qiskit Runtime primitives, execution modes, IBM Quantum systems, and executing jobs
 
 ---
 
@@ -8,9 +8,9 @@ description: Overview of the Run section, where you'll find information on IBM Q
 
 IBM Quantum&trade; maintains the world’s most advanced fleet of quantum systems, with seven [utility-scale](https://www.ibm.com/blog/announcement/new-ibm-quantum-systems-on-the-ibm-cloud/) quantum systems, and more on the way. These systems demonstrate unparalleled reliability, with >95% uptime across the fleet of quantum systems - and unmatched stability, with two-qubit gate error fluctuations no larger than 0.001 over timescales measured in months[^1].
 
-## Run
+## Run on hardware
 
-The run step in Qiskit Patterns centers around the [Qiskit Runtime primitives](primitives) as the interface with IBM Quantum&trade; hardware, abstracting away error suppression and mitigation techniques so that you can focus more on the outcomes of your quantum computation.
+Step 3 in Qiskit Patterns, "Run on hardware," centers around the [Qiskit Runtime primitives](primitives) as the interface with IBM Quantum&trade; hardware, abstracting away error suppression and mitigation techniques so that you can focus more on the outcomes of your quantum computation.
 
 In addition to detailed information on primitives, you can read about the available execution modes in this section. While you can always submit a single job at a time, you can also use Runtime Primitives to run jobs in a [session](sessions) or in [batch mode](run-jobs-batch). These execution modes assist your utility-scale jobs to run efficiently. 
 
