--- a/docs/run/primitives-get-started.mdx
+++ b/docs/run/primitives-get-started.mdx
@@ -69,9 +69,9 @@ To use the V2 Estimator, import the **EstimatorV2** class. The **Estimator** cla
   <TabItem value="EstimatorV2" label="V2 Estimator">
 
 ```python
-from qiskit_ibm_runtime import EstimatorV2
+from qiskit_ibm_runtime import EstimatorV2 as Estimator
 
-estimator = EstimatorV2(backend=backend)
+estimator = Estimator(backend=backend)
  ```
   </TabItem>
 
@@ -172,9 +172,9 @@ To use the V2 Sampler, import the **SamplerV2** class. The **Sampler** class sti
 <Tabs>
   <TabItem value="SamplerV2" label="V2 Sampler">
     ```python
-from qiskit_ibm_runtime import SamplerV2
+from qiskit_ibm_runtime import SamplerV2 as Sampler
 
-sampler = SamplerV2(backend=backend)
+sampler = Sampler(backend=backend)
 ```
   </TabItem>
 
