--- a/docs/api/migration-guides/v2-primitives.mdx
+++ b/docs/api/migration-guides/v2-primitives.mdx
@@ -903,16 +903,13 @@ n_qubits = 127
 mat = np.real(random_hermitian(n_qubits, seed=1234))
 circuit = IQP(mat)
 circuit.measure_all()
-
-pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
-isa_circuits = pm.run(circuits)
  
-sampler = Sampler(backend) 
-job = sampler.run(isa_circuits)
-result = job.result() 
-
-for idx, pub_result in enumerate(result):
-    print(f" > Counts for pub {idx}: {pub_result.data.meas.get_counts()}")
+pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+isa_circuit = pm.run(circuit)
+ 
+sampler = Sampler(backend)
+job = sampler.run([(isa_circuit,)])
+result = job.result()
 ```  
   </TabItem>
 
@@ -970,11 +967,10 @@ for circuit in circuits:
     circuit.measure_all()
 
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
-isa_circuits = pm.run(circuits)    
-pubs = [(qc,) for qc in isa_circuits]
+isa_circuits = pm.run(circuits)
  
 sampler = Sampler(backend) 
-job = sampler.run(pubs)
+job = sampler.run(isa_circuits)
 result = job.result() 
 
 for idx, pub_result in enumerate(result):
