--- a/docs/api/migration-guides/v2-primitives.mdx
+++ b/docs/api/migration-guides/v2-primitives.mdx
@@ -967,11 +967,10 @@ for circuit in circuits:
     circuit.measure_all()
 
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
-isa_circuits = pm.run(circuits)    
-pubs = [(qc,) for qc in isa_circuits]
+isa_circuits = pm.run(circuits)
  
 sampler = Sampler(backend) 
-job = sampler.run(pubs)
+job = sampler.run(isa_circuits)
 result = job.result() 
 
 for idx, pub_result in enumerate(result):
