--- a/docs/run/primitives.mdx
+++ b/docs/run/primitives.mdx
@@ -132,12 +132,9 @@ Here are some examples of common patterns expressed in terms of array broadcasti
 
 ```python
 # Broadcast single observable
-parameter_values = np.array(1.0)
-parameter_values.shape == ()
-observables = observable = SparsePauliOp("Z" * 5)
-
-observables.shape == (5,)
->> task_result.shape == (5,)
+parameter_values = np.random.uniform(size=(5,))  # this has shape (5,)
+observables = SparsePauliOp("ZZZ")  # this has shape ()
+>> pub result has shape (5,)
 
 # Zip
 parameter_values = BindingsArray(np.random.uniform(size=(5,)))
