--- a/docs/run/primitives.mdx
+++ b/docs/run/primitives.mdx
@@ -147,11 +147,12 @@ observables = [[SparsePauliOp(pauli)] for pauli in ["III", "XXX", "YYY", "ZZZ"]]
 >> pub result has shape (4, 6)
 
 # Standard nd generalization
-parameter_values = BindingsArray(np.random.uniform(size=(3, 6)))
-parameter_values.shape == (3, 6)
-observables = SparsePauliOp("Z" * 6)
-observables.shape == (2, 3, 1)
->> task_result.shape == (3, 6, 2)
+parameter_values = np.random.uniform(size=(3, 6))  # this has shape (3, 6)
+observables = [
+    [[SparsePauliOp(['XII'])], [SparsePauliOp(['IXI'])], [SparsePauliOp(['IIX'])]],
+    [[SparsePauliOp(['ZII'])], [SparsePauliOp(['IZI'])], [SparsePauliOp(['IIZ'])]]
+]  # this has shape (2, 3, 1)
+>> pub result has shape (2, 3, 6)
 ```
 
 ![Parameter value sets are represented by n x m arrays, and observable arrays are represented by one or more single-column arrays. For each example in the previous code, the parameter value sets are combined with their observable array to create the resulting EV estimates.  Example 1 (broadcast single observable) has a parameter value set that is a 5x1 array and a 1x1 observables array.  The one item in the observables array is combined with each item in the parameter value set to create a single 5x1 array where each item is a combination of the original item in the parameter value set with the item in the observables array.  Example 2 (zip) has a 5x1 parameter value set and a 5x1 observables array.  The output is a 5x1 array where each item is a combination of the nth item in the parameter value set with the nth item in the observables array.  Example 3 (outer/product) has a 1x6 parameter value set and a 4x1 observables array.  Their combination results in a 4x6 array that is created by combining each item in the parameter value set with *every* item in the observables array.  Thus, each parameter value becomes an entire column in the output.  Example 4 (Standard nd generalization) has a 3x6 parameter value set array and two 3x1 observables array.  They combine to create two 3x6 output arrays in a similar manner to the previous example.](/images/run/broadcasting.svg "Visual representation of broadcasting")
