--- a/docs/start/index.mdx
+++ b/docs/start/index.mdx
@@ -10,7 +10,7 @@ in_page_toc_max_heading_level: 2
 
 The quantum community has explored quantum computing on the cloud since 2016.  Now the community has a new challenge: *demonstrate useful quantum computation*. 
 
-Through IBM Quantum, you have access to performant and utility-scale (>100-qubit) quantum systems for your work, as well as scalable and flexible quantum software. In particular, the milestone [1.0 release](https://research.ibm.com/blog/qiskit-1-launch) of Qiskit has ushered in a new era of performance and stability for the quantum software community. Whether you try out a no-cost plan or run your programs through a pay-as-you-go or premium plan, you can start doing useful work with quantum computing now.
+Through IBM Quantum, you have access to performant and utility-scale (>100-qubit) quantum systems for your work, as well as scalable and flexible quantum software. In particular, the milestone [1.0 release](https://research.ibm.com/blog/qiskit-1-launch) of the Qiskit SDK has ushered in a new era of performance and stability for the quantum software community. Whether you try out a no-cost plan or run your programs through a pay-as-you-go or premium plan, you can start doing useful work with quantum computing now.
 
 
 The sections at the core of our documentation are based on the stages of a typical quantum user’s journey: build quantum circuits and operators in Qiskit, then transpile and run on quantum systems using Qiskit Runtime primitives, a simplified interface for circuit execution. By pairing Qiskit with Qiskit Runtime, you benefit from seamless circuit execution powered by advanced runtime compilation, error suppression, and error mitigation techniques. 
