--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -123,6 +123,14 @@
    "source": [
     "<Admonition type=\"note\" title=\"Important:\">\n",
     "To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as *instruction set architecture (ISA)* circuits and observables) before being submitted to the Qiskit Runtime primitives.  See the [transpilation documentation](../transpile) for instructions to transform circuits.  Due to this change, the primitives will no longer perform layout or routing operations.  Consequently, transpilation options referring to those tasks will no longer have any effect. Users can still request that the primitives do no optimization of input circuits by specifying `optimization_level=0`.\n",
+    "\n",
+    "\n",
+    "**Exception**: The Q-CTRL primitives continue to support abstract circuits, as in the following code: \n",
+    "\n",
+    "``` python\n",
+    "service = QiskitRuntimeService(channel=\"ibm_cloud\", channel_strategy=\"q-ctrl\")\n",
+    "```\n",
+    "\n",
     "</Admonition>"
    ]
   },
@@ -290,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.0"
   },
   "title": "Hello world"
  },
