shots were moved

--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -179,7 +179,7 @@
     "\n",
     "estimator = Estimator(backend)\n",
     "estimator.options.resilience_level = 1\n",
-    "estimator.options.execution.shots = 5000\n",
+    "estimator.options.default_shots = 5000\n",
     "\n",
     "# Convert to an ISA circuit and layout-mapped observables.\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
