--- a/docs/api/migration-guides/index.mdx
+++ b/docs/api/migration-guides/index.mdx
@@ -16,6 +16,7 @@ These migration guides help you more effectively use Qiskit and Qiskit Runtime:
    * [How to migrate](./qiskit-runtime)
    * [Examples](./qiskit-runtime-examples)
    * [Migrate `backend.run()` from `qiskit_ibm_provider` to `qiskit_ibm_runtime`](./qiskit-runtime-from-provider)
+* [Migrate to local simulators](/api/migration-guides/local-simulators)
 * Qiskit 0.44 changes
    * [`qiskit.algorithms` new interface](./qiskit-algorithms-module)
    * [`qiskit.opflow` deprecation](./qiskit-opflow-module)
