--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -175,7 +175,8 @@
     "backend = service.least_busy(simulator=False, operational=True)\n",
     "\n",
     "# Use the following code instead if you want to run on a simulator:\n",
-    "# backend = service.get_backend(\"ibmq_qasm_simulator\")\n",
+    "# from qiskit_ibm_runtime.fake_provider import FakeCairoV2\n",
+    "# backend = FakeCairoV2()\n",
     "\n",
     "estimator = Estimator(backend)\n",
     "estimator.options.resilience_level = 1\n",
@@ -290,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.0"
   },
   "title": "Hello world"
  },
