--- a/docs/run/primitives.mdx
+++ b/docs/run/primitives.mdx
@@ -124,7 +124,7 @@ A1     (1d array):  5
 A2     (1d array):  3 
 
 A1     (2d array):      2 x 1
-A2     (3d array):  6 x 5 x 4 #This would work except for the middle dimensions (2 compared to 5).
+A2     (3d array):  6 x 5 x 4 # This would work if the middle dimension were 2, but it is 5.
 ```
 
 `EstimatorV2` returns one expectation value estimate for each element of the broadcasted shape.  
@@ -190,8 +190,8 @@ sampler.run([circuit1, circuit2, ...],[observable1, observable2, ...],[param_val
 
 #### Sampler V2
 
-* Takes one parameter: PUBs in the format  (`<circuit>`, `<parameter values>`, `<shots>`) (Note that there is only one circuit per PUB and an optional value for `shots`, but `parameter values` can be a list or a single parameter)
-* Elements from each are aggregated. For example, each parameter value in the PUB is applied to the PUB's circuit.
+* Takes one parameter: PUBs in the format  (`<single circuit>`, `<optional one or more parameter values>`, `<optional shots>`). Note that there is only one circuit per PUB and an optional value for `shots`, but there can be multiple items of `parameter values`, and each item can be either an array or a single parameter (depending on the chosen circuit).
+* Elements from each are aggregated. For example, each array of parameter values in the PUB is applied to the PUB's circuit.
 * Obeys program outputs. Typically this is a bit array but can also be an array of complex numbers (measurement level 1). 
 * Returns raw data type. Data from each shot is returned (analogous to `memory=True` in the `backend.run` interface), and post-processing is done by using convenience methods.
 * Output data is grouped by output registers.
