--- a/docs/run/primitives.mdx
+++ b/docs/run/primitives.mdx
@@ -75,12 +75,13 @@ The updated interface uses a *primitive unified bloc* (PUB) for input.  Each PUB
 Example: 
 
 ```python
-estimator.run([circuit1, circuit2, ...],[observable1, observable2, ...],[param_values1, param_values2, ...] )
+estimator.run([circuit1, circuit2, ...],[observable1, observable2, ...],
+  [param_values1, param_values2, ...] )
 ```
 
 #### Estimator V2
 
-* The `run()` method takes an array of PUBs. Each PUB is in the format (`<single circuit>`, `<one or more observables>`, `<optional one or more parameter values>`, `<optional precision>`)
+* The `run()` method takes an array of PUBs. Each PUB is in the format (`<single circuit>`, `<one or more observables>`, `<optional one or more parameter values>`, `<optional precision>`), where the optional `parameter values` can be a list or a single parameter.
 * Combines elements from observables and parameter values by following NumPy broadcasting rules as described below. 
 * Each input PUB has a corresponding PubResult that contains both data and metadata.
 
@@ -133,26 +134,27 @@ Here are some examples of common patterns expressed in terms of array broadcasti
 
 ```python
 # Broadcast single observable
-parameter_values = np.random.uniform(size=(5,))  # this has shape (5,)
-observables = SparsePauliOp("ZZZ")  # this has shape ()
+
+parameter_values = np.random.uniform(size=(5,))  # shape (5,)
+observables = SparsePauliOp("ZZZ")  # shape ()
 >> pub result has shape (5,)
 
 # Zip
-parameter_values = np.random.uniform(size=(5,))  # this has shape (5,)
-observables = [SparsePauliOp(pauli) for pauli in ["III", "XXX", "YYY", "ZZZ", "XYZ"]]  # this has shape (5,)
+parameter_values = np.random.uniform(size=(5,))  # shape (5,)
+observables = [SparsePauliOp(pauli) for pauli in ["III", "XXX", "YYY", "ZZZ", "XYZ"]]  # shape (5,)
 >> pub result has shape (5,)
 
 # Outer/Product
-parameter_values = np.random.uniform(size=(1, 6))  # this has shape (1, 6)
-observables = [[SparsePauliOp(pauli)] for pauli in ["III", "XXX", "YYY", "ZZZ"]]  # this has shape (4, 1)
+parameter_values = np.random.uniform(size=(1, 6))  # shape (1, 6)
+observables = [[SparsePauliOp(pauli)] for pauli in ["III", "XXX", "YYY", "ZZZ"]]  # shape (4, 1)
 >> pub result has shape (4, 6)
 
 # Standard nd generalization
-parameter_values = np.random.uniform(size=(3, 6))  # this has shape (3, 6)
+parameter_values = np.random.uniform(size=(3, 6))  # shape (3, 6)
 observables = [
     [[SparsePauliOp(['XII'])], [SparsePauliOp(['IXI'])], [SparsePauliOp(['IIX'])]],
     [[SparsePauliOp(['ZII'])], [SparsePauliOp(['IZI'])], [SparsePauliOp(['IIZ'])]]
-]  # this has shape (2, 3, 1)
+]  # shape (2, 3, 1)
 >> pub result has shape (2, 3, 6)
 ```
 
@@ -190,7 +192,7 @@ sampler.run([circuit1, circuit2, ...],[observable1, observable2, ...],[param_val
 
 #### Sampler V2
 
-* Takes one parameter: PUBs in the format  (`<circuit>`, `<parameter values>`, `<shots>`) (Note that there is only one circuit per PUB and an optional value for `shots`, but `parameter values` can be a list or a single parameter)
+* Takes one parameter: PUBs in the format  (`<single circuit>`, `<optional one or more parameter values>`, `<optional shots>`), where the optional `parameter values` can be a list or a single parameter.
 * Elements from each are aggregated. For example, each parameter value in the PUB is applied to the PUB's circuit.
 * Obeys program outputs. Typically this is a bit array but can also be an array of complex numbers (measurement level 1). 
 * Returns raw data type. Data from each shot is returned (analogous to `memory=True` in the `backend.run` interface), and post-processing is done by using convenience methods.
