--- a/docs/run/primitives.mdx
+++ b/docs/run/primitives.mdx
@@ -192,7 +192,7 @@ sampler.run([circuit1, circuit2, ...],[observable1, observable2, ...],[param_val
 
 #### Sampler V2
 
-* Takes one parameter: PUBs in the format  (`<single circuit>`, `<optional one or more parameter values>`, `<optional shots>`). Note that there is only one circuit per PUB and an optional value for `shots`, but there can be multiple items of `parameter values`, and each item can be either an array or a single parameter (depending on the chosen circuit).
+* Takes one parameter: PUBs in the format  (`<single circuit>`, `<optional one or more parameter values>`, `<optional shots>`), where there can be multiple `parameter values` items, and each item can be either an array or a single parameter, depending on the chosen circuit.
 * Elements from each are aggregated. For example, each array of parameter values in the PUB is applied to the PUB's circuit.
 * Obeys program outputs. Typically this is a bit array but can also be an array of complex numbers (measurement level 1). 
 * Returns raw data type. Data from each shot is returned (analogous to `memory=True` in the `backend.run` interface), and post-processing is done by using convenience methods.
